--- a/app/src/main/res/layout/activity_ad_map.xml
+++ b/app/src/main/res/layout/activity_ad_map.xml
@@ -20,22 +20,35 @@
             android:layout_height="match_parent"
             android:orientation="horizontal"
             >
-        <Spinner
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:layout_margin="5dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/white_back"
-            android:id="@+id/scity"
-            />
-        <Spinner
-            android:layout_width="0dp"
-            android:layout_weight="3"
-            android:layout_margin="5dp"
-            android:layout_height="match_parent"
-            android:id="@+id/sloc"
-            android:background="@drawable/white_back"
-            />
+            <androidx.cardview.widget.CardView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:layout_margin="5dp"
+                android:background="@drawable/white_back"
+                >
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/scity"
+                    />
+            </androidx.cardview.widget.CardView>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_margin="5dp"
+                >
+                <ImageButton
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:layout_margin="2dp"
+                    android:id="@+id/uploadAd"
+                    android:background="@drawable/button_background"
+                    android:src="@drawable/ic_file_upload_24dp"
+                    />
+            </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
     <RelativeLayout
