--- a/app/src/main/res/layout/activity_ad_map.xml
+++ b/app/src/main/res/layout/activity_ad_map.xml
@@ -23,7 +23,7 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="3"
+                android:layout_weight="1"
                 android:layout_margin="5dp"
                 android:background="@drawable/white_back"
                 >
@@ -39,6 +39,16 @@
                 android:layout_weight="1"
                 android:layout_margin="5dp"
                 >
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:text="Show Screens"
+                    android:layout_margin="2dp"
+                    android:textColor="#FFF"
+                    android:id="@+id/screensDialogOpener"
+                    android:background="@drawable/button_background"
+                    />
                 <ImageButton
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
