--- a/app/src/main/res/layout/activity_screen_location_ad_upload.xml
+++ b/app/src/main/res/layout/activity_screen_location_ad_upload.xml
@@ -38,14 +38,33 @@
             android:layout_weight="12"
             android:id="@+id/screen_loc_list"
             />
-        <ImageButton
-            android:layout_width="50dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_gravity="center"
             android:layout_weight="1"
-            android:background="@drawable/button_background"
-            android:src="@drawable/ic_file_upload_24dp"
-            />
+            android:orientation="horizontal">
+            <Button
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_margin="5dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:textColor="#FFF"
+                android:background="@drawable/button_background"
+                android:text="CHOOSE FILE TO UPLOAD"
+                android:id="@+id/chooseContent"
+                />
+            <ImageButton
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_margin="5dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@drawable/button_background"
+                android:src="@drawable/ic_file_upload_24dp"
+                android:id="@+id/uploadContent"
+                />
+        </LinearLayout>
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
