--- a/app/src/main/res/layout/activity_user_dashboard.xml
+++ b/app/src/main/res/layout/activity_user_dashboard.xml
@@ -29,6 +29,13 @@
                 android:id="@+id/generalMenu"
             />
         </androidx.appcompat.widget.Toolbar>
+        <FrameLayout
+            android:id="@+id/dashboardFrame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/toolbar"
+            android:layout_above="@+id/bottom_navigation"
+            />
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
