--- a/app/src/main/res/layout/activity_screen_information.xml
+++ b/app/src/main/res/layout/activity_screen_information.xml
@@ -11,10 +11,19 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="5"
-            android:padding="5dp"
-            android:src="@mipmap/ic_launcher"
+            android:padding="2dp"
+            android:id="@+id/locationImgView"
             android:scaleType="centerCrop"
             android:layout_gravity="center"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:id="@+id/sctitle"
+            android:textColor="#000"
+            android:textSize="30sp"
+            android:gravity="center"
             />
         <com.google.android.material.tabs.TabLayout
             android:layout_width="match_parent"
@@ -25,7 +34,7 @@
         <androidx.viewpager.widget.ViewPager
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="5"
+            android:layout_weight="4"
             android:padding="5dp"
             android:id="@+id/screenInfoView"
             />
