--- a/app/src/main/res/layout/fragment_screen_address.xml
+++ b/app/src/main/res/layout/fragment_screen_address.xml
@@ -9,6 +9,8 @@
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Mathikere Complex MSR Nagar" />
+        android:text="Mathikere Complex MSR Nagar"
+        android:id="@+id/sfaddr"
+        />
 
 </FrameLayout>
