--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:orientation="vertical"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
@@ -48,48 +48,83 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="345dp"
+                android:layout_height="400dp"
                 android:orientation="vertical"
                 >
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawablePadding="10dp"
-                    android:id="@+id/email"
+                    android:drawablePadding="5dp"
+                    android:id="@+id/newemail"
                     android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginStart="20dp"
-                    android:hint="EMAIL"
-                    android:padding="20dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="10dp"
+                    android:hint="Email"
+                    android:padding="10dp"
                     android:textSize="14sp"
                     android:textColorHint="#606060"
                     android:inputType="text"/>
+
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
-                    android:layout_marginEnd="20dp"
-                    android:id="@+id/password"
-                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="10dp"
+                    android:id="@+id/PhoneNumber"
+                    android:layout_marginStart="10dp"
                     android:textSize="14sp"
-                    android:drawablePadding="10dp"
-                    android:hint="PASSWORD"
-                    android:padding="20dp"
+                    android:drawablePadding="5dp"
+                    android:hint="Phone Number"
+                    android:padding="10dp"
+                    android:textColorHint="#606060"
+                    android:inputType="text"/>
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
+                    android:layout_marginEnd="10dp"
+                    android:id="@+id/companyName"
+                    android:layout_marginStart="10dp"
+                    android:textSize="14sp"
+                    android:drawablePadding="5dp"
+                    android:hint="Your Company Name"
+                    android:padding="10dp"
+                    android:textColorHint="#606060"
+                    android:inputType="text"/>
+
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
+                    android:layout_marginEnd="10dp"
+                    android:id="@+id/newpassword"
+                    android:layout_marginStart="10dp"
+                    android:textSize="14sp"
+                    android:drawablePadding="5dp"
+                    android:hint="Password"
+                    android:padding="10dp"
                     android:textColorHint="#606060"
                     android:inputType="textPassword"/>
 
-                <ImageButton
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_gravity="end"
-                    android:layout_marginTop="70dp"
-                    android:layout_marginEnd="25dp"
-                    android:id="@+id/signin"
-                    android:src="@drawable/ic_arrow_forward_black_24dp"
-                    android:background="@drawable/button_background"
-                    android:layout_marginRight="25dp" />
-
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
+                    android:layout_marginEnd="10dp"
+                    android:id="@+id/newconfirmpassword"
+                    android:layout_marginStart="10dp"
+                    android:textSize="14sp"
+                    android:drawablePadding="5dp"
+                    android:hint="Confirm Password"
+                    android:padding="10dp"
+                    android:textColorHint="#606060"
+                    android:inputType="textPassword"/>
 
             </LinearLayout>
 
@@ -98,29 +133,19 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:gravity="center">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="25dp"
-                    android:text="New User?"
-                    android:textAlignment="center"
-                    android:textColor="@android:color/black"
-                    android:textStyle="bold" />
-
                 <Button
-                    android:layout_width="match_parent"
+                    android:layout_width="150dp"
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:layout_gravity="center"
                     android:layout_marginLeft="40dp"
                     android:layout_marginRight="40dp"
                     android:layout_marginTop="10dp"
-                    android:id="@+id/signup"
+                    android:id="@+id/register"
                     android:background="@drawable/button_background"
-                    android:text="SIGN UP"
+                    android:text="Register"
                     android:textColor="@android:color/white" />
+
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
